--- a/templates/base.html
+++ b/templates/base.html
@@ -44,8 +44,8 @@
                     href="{{ url_for('tasks') }}">Tasks</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link {% if url_for('cats')==request.path %}active{% endif %}" 
-                    href="{{ url_for('cats') }}">Manage Categories</a>
+                <a class="nav-link {% if url_for('categories')==request.path %}active{% endif %}" 
+                    href="{{ url_for('categories') }}">Manage Categories</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link {% if url_for('profile')==request.path %}active{% endif %}" 
