--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -37,7 +37,7 @@
                 <div class="col-7 col-lg-3">
                   <label for="category_id" class="form-label">Category</label>
                   <select name="category_id" id="category_id">
-                      <option value="none"></option>
+                      <option value=""></option>
                       {% for category_id in categories %}
                       <option value="{{ category_id }}" {% if category_id==last_task['category_id'] %}selected{% endif %}>
                           {{ categories[category_id]['description'] }}
@@ -74,13 +74,33 @@
                 <input type="file" name="SourceFileName" id="SourceFileName">
               </div>
               <button type="submit" class="btn btn-primary offset-1 col-10 shadow-2-strong my-3">
-                <span class="lead">{% if update==True %}Update record{% else %}Add record{% endif %}</span>
                 <i class="fas {% if update==True %}fa-edit{% else %}fa-plus-square{% endif %} fa-2x ms-3"></i>
+                <span class="lead">{% if update==True %}Update record{% else %}Add record{% endif %}</span>
               </button>
             </div>
           </div>
         </form>
     </div>
+
+    {% if not update %}
+    <div class="row">
+      <form action="{{ url_for('search') }}" method="POST" class="card col-12 offset-md-2 col-md-8 offset-lg-3 col-lg-6">
+          <div class="row valign-wrapper center-align">
+              <div class="input-field col s12 m8">
+                  <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
+                  <input type="text" name="query" id="query" minlength="3" class="validate" required>
+                  <label for="query">Search Tasks</label>
+              </div>
+              <div class="col s12 m4">
+                <button type="submit" class="btn bg-primary text-shadow">
+                    <i class="fas fa-search"></i> Search
+                </button>
+                  <a href="{{ url_for('tasks') }}" class="btn bg-danger text-shadow">Reset</a>
+              </div>
+          </div>
+      </form>
+    </div>
+    {% endif %}
 
     {% if tasks %}
     <div class="accordion col-12 offset-md-2 col-md-8 offset-lg-3 col-lg-6" id="accordionTasks">
