--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -83,21 +83,21 @@
     </div>
 
     {% if not update %}
-    <div class="row">
+    <div class="row my-3 ps-2">
       <form action="{{ url_for('search') }}" method="POST" class="card col-12 offset-md-2 col-md-8 offset-lg-3 col-lg-6">
-          <div class="row valign-wrapper center-align">
-              <div class="input-field col s12 m8">
-                  <i class="fas fa-search prefix light-blue-text text-darken-4"></i>
-                  <input type="text" name="query" id="query" minlength="3" class="validate" required>
-                  <label for="query">Search Tasks</label>
-              </div>
-              <div class="col s12 m4">
-                <button type="submit" class="btn bg-primary text-shadow">
-                    <i class="fas fa-search"></i> Search
-                </button>
-                  <a href="{{ url_for('tasks') }}" class="btn bg-danger text-shadow">Reset</a>
-              </div>
-          </div>
+        <div class="row">
+        <div class="form-outline col-6">
+            <i class="fas fa-search fa-lg trailing"></i>
+            <input type="text" name="query" id="query" minlength="3" class="form-control form-icon-trailing">
+            <label for="query" class="form-label">Search Tasks</label>
+        </div>
+        <div class="form-outline col-6">
+        <button type="submit" class="btn bg-primary text-shadow">
+            <i class="fas fa-search"></i> Search
+        </button>
+        <a href="{{ url_for('tasks') }}" class="btn bg-danger text-shadow">Reset</a>
+        </div>
+      </div>
       </form>
     </div>
     {% endif %}
