--- a/templates/base.html
+++ b/templates/base.html
@@ -1,92 +1,88 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <link rel="icon" href="{{ url_for('static', filename='tasks.png') }}" type="image/x-icon">
-    <title>Task Master</title>
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
-    <!-- Google Fonts Roboto -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap">
-    <!-- MDB -->
-    <link rel="stylesheet" href="{{ url_for('static', filename='mdb.min.css') }}/" />
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
-    {% block head %}{% endblock %}
-  </head>
-  <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-2-strong">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="{{ url_for('index') }}">Task Master</a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-mdb-toggle="collapse"
-            data-mdb-target="#navbarToggler"
-            aria-controls="navbarToggler"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <i class="fas fa-bars"></i>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarToggler">
-            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link {% if url_for('index')==request.path %}active{% endif %}" aria-current="page" 
-                   href="{{ url_for('index') }}">Home</a>
-              </li>
-              {% if session['user_id'] %}
-              <li class="nav-item">
-                <a class="nav-link {% if url_for('tasks')==request.path %}active{% endif %}" 
-                    href="{{ url_for('tasks') }}">Tasks</a>
-              </li>
-              {% if session['user_is_admin'] %}
-              <li class="nav-item">
-                <a class="nav-link {% if url_for('categories')==request.path %}active{% endif %}" 
-                    href="{{ url_for('categories') }}">Manage Categories</a>
-              </li>
-              {% endif %}
-              <li class="nav-item">
-                <a class="nav-link {% if url_for('profile')==request.path %}active{% endif %}" 
-                    href="{{ url_for('profile') }}">Profile</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
-              </li>
-              {% else %}
-              <li class="nav-item">
-                <a class="nav-link {% if url_for('login')==request.path %}active{% endif %}" 
-                    href="{{ url_for('login') }}">Log In</a>
-              </li>
-              {% endif %}
-            </ul>
-          </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta http-equiv="x-ua-compatible" content="ie=edge" />
+  <link rel="icon" href="{{ url_for('static', filename='tasks.png') }}" type="image/x-icon">
+  <title>Task Master</title>
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css">
+  <!-- Google Fonts Roboto -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap">
+  <!-- MDB -->
+  <link rel="stylesheet" href="{{ url_for('static', filename='mdb.min.css') }}/" />
+
+  <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
+  {% block head %}{% endblock %}
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-2-strong">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="{{ url_for('index') }}">Task Master</a>
+        <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarToggler"
+          aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+          <i class="fas fa-bars"></i>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarToggler">
+          <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link {% if url_for('index')==request.path %}active{% endif %}" aria-current="page"
+                href="{{ url_for('index') }}">Home</a>
+            </li>
+            {% if session['user_id'] %}
+            <li class="nav-item">
+              <a class="nav-link {% if url_for('tasks')==request.path %}active{% endif %}"
+                href="{{ url_for('tasks') }}">Tasks</a>
+            </li>
+            {% if session['user_is_admin'] %}
+            <li class="nav-item">
+              <a class="nav-link {% if url_for('categories')==request.path %}active{% endif %}"
+                href="{{ url_for('categories') }}">Manage Categories</a>
+            </li>
+            {% endif %}
+            <li class="nav-item">
+              <a class="nav-link {% if url_for('profile')==request.path %}active{% endif %}"
+                href="{{ url_for('profile') }}">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('logout') }}">Log Out</a>
+            </li>
+            {% else %}
+            <li class="nav-item">
+              <a class="nav-link {% if url_for('login')==request.path %}active{% endif %}"
+                href="{{ url_for('login') }}">Log In</a>
+            </li>
+            {% endif %}
+          </ul>
         </div>
-      </nav>
-    </header>
-    
-    <section>
-      <!-- flash messages -->
-      {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-            {% for category, message in messages %}
-            <div class="row">
-              <h4 class="text-primary bg-info text-center mt-3 {{ category }}">{{ message }}</h4>
-            </div>
-            {% endfor %}
-        {% endif %}
-      {% endwith %}      
-    </section>
+      </div>
+    </nav>
+  </header>
 
-    {% block body %}{% endblock %}
+  <section>
+    <!-- flash messages -->
+    {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+    {% for category, message in messages %}
+    <div class="row">
+      <h4 class="text-primary bg-info text-center mt-3 {{ category }}">{{ message }}</h4>
+    </div>
+    {% endfor %}
+    {% endif %}
+    {% endwith %}
+  </section>
 
-    <!-- MDB -->
-    <script type="text/javascript" src="{{ url_for('static', filename='mdb.min.js') }}"></script>
-    <!-- Custom scripts -->
-    <script type="text/javascript">
-    </script>
-  </body>
+  {% block body %}{% endblock %}
+
+  <!-- MDB -->
+  <script type="text/javascript" src="{{ url_for('static', filename='mdb.min.js') }}"></script>
+  <!-- Custom scripts -->
+  <script type="text/javascript">
+  </script>
+</body>
+
 </html>
