--- a/templates/reglog.html
+++ b/templates/reglog.html
@@ -13,8 +13,8 @@
                     <i class="fas {% if register %}fa-user-plus{% else %}fa-user-cog{% endif %} fa-2x text-primary"></i>
                 </div>
                 <div class="form-outline col-10 mt-3">
-                    <input type="text" id="username" name="username" class="form-control" 
-                        minlength="5" maxlength="15" pattern="^[a-zA-Z\d]{5,15}$" required>
+                    <input type="text" id="username" name="username" class="form-control" minlength="5" maxlength="15"
+                        pattern="^[a-zA-Z\d]{5,15}$" required>
                     <label class="form-label" for="username">Username</label>
                 </div>
                 <div class="col-11 col-lg-12 text-end mt-0">
@@ -27,15 +27,16 @@
                     <i class="fas fa-user-lock fa-2x text-primary"></i>
                 </div>
                 <div class="form-outline col-10 mt-3">
-                    <input type="password" id="password" name="password" class="form-control" 
-                        minlength="5" maxlength="15" pattern="^[a-zA-Z\d]{5,15}$" required>
+                    <input type="password" id="password" name="password" class="form-control" minlength="5"
+                        maxlength="15" pattern="^[a-zA-Z\d]{5,15}$" required>
                     <label class="form-label" for="password">Password</label>
                 </div>
                 <div class="col-11 col-lg-12 text-end mt-0">
                     <span id="password-rule" class="form-text">Must be 5-15 characters long.</span>
                 </div>
                 <button type="submit" class="btn btn-primary offset-1 col-10 shadow-2-strong my-3">
-                    <span class="lead">{% if register %}Register{% else %}Log In{% endif %}</span><i class="fas fa-sign-in-alt fa-2x ms-3"></i>
+                    <span class="lead">{% if register %}Register{% else %}Log In{% endif %}</span><i
+                        class="fas fa-sign-in-alt fa-2x ms-3"></i>
                 </button>
             </div>
         </form>
